--- a/src/r1-v/configs/qwen2_5vl_sft_config_fundo.yaml
+++ b/src/r1-v/configs/qwen2_5vl_sft_config_fundo.yaml
@@ -4,7 +4,7 @@ model_revision: main
 torch_dtype: bfloat16
 
 # Data training arguments
-dataset_name: Leeyuyu/fundo_SFT
+dataset_name: Leeyuyu/fundo_SFT_nothink
 dataset_configs:
 - all
 preprocessing_num_workers: 4
@@ -12,14 +12,15 @@ preprocessing_num_workers: 4
 # SFT trainer config
 bf16: true
 do_eval: true
-eval_strategy: "no"
-gradient_accumulation_steps: 16
+eval_strategy: "steps"
+eval_steps: 50
+gradient_accumulation_steps: 4
 gradient_checkpointing: true
 gradient_checkpointing_kwargs:
   use_reentrant: false
-hub_model_id: Qwen2.5-VL-3B-Instruct-SFT-fundo
+hub_model_id: Leeyuyu/Qwen2.5-SFT-GRPO-fundo
 hub_strategy: every_save
-learning_rate: 2.0e-05
+learning_rate: 2.0e-06
 log_level: info
 logging_steps: 1
 logging_strategy: steps
@@ -27,8 +28,8 @@ lr_scheduler_type: cosine
 packing: true
 max_seq_length: 4096
 max_steps: -1
-num_train_epochs: 1
-output_dir: /workspace/outputs/grpo_run
+num_train_epochs: 2
+output_dir: /workspace/outputs/grpo_run_sft
 overwrite_output_dir: true
 per_device_eval_batch_size: 4
 per_device_train_batch_size: 4
@@ -36,6 +37,7 @@ push_to_hub: true
 report_to:
 - wandb
 save_strategy: "steps"
-save_steps: 100
+save_steps: 50
 seed: 42
 warmup_ratio: 0.1
+resume_from_checkpoint: None 
